
- Reports that 0.19 does not create a binary on some dist's "debian". 0.17 compiles fine. I think this is because
  I removed the -ldl linker option for FreeBSD. Some dist's need the linker option. Updated all the *.pro files to add
  the -ldl linker option if on a linux-g++ system.

0.19
====

This is a rush release to address some nasty bugs.

- There was a nasty bug that segfaulted on new installs and when trying to delete the last tabbed indicator.
  In trying to fix this I found an annoying limitation with the QTabWidget. In order to fix this I had to make
  a tabbed indicator page always visible in order to propagate resize signals properly.

- Adjusted the initial chart position by one bar due to some plots being partially truncated.

- I was unhappy with the all the tab function buttons causing limitations to resizing. I removed the buttons
  and replaced them with a context menu instead. Just right click with the mouse to bring it up. Doh!

- Changed the tab directory widgets to behave more like the standard directory dialogs. Double clicks to
  enter and leave sub directories instead of single clicks. Singles were creating some problems.

0.18
====

- Removed the -ldl linker parm from all *.pro files. This was a legacy issue, no longer needed.
  Now compiles on FreeBSD just like on Linux. Yea baby.

- Updated CC plugin to allow for rollover control. Number used is days from last trading day to
  rollover to the next contract. This can be a lengthy process to run this plugin as it has to rebuild each chart
  from scratch every time you update. Allow for a few minutes to complete. Also added a maximum years
  parm to limit the size of the chart.

- Updated HLC plugin to follow Donchian rule.

- Removed the charts from the backtesting dialog. This was bloat and fluff we don't need. Everything that is 
  important is in the summary.
  
- Added a global font preference for the app.
