@@ -9,6 +9,8 @@
 - Reports that 0.19 does not create a binary on some dist's "debian". 0.17 compiles fine. I think this is because
   I removed the -ldl linker option for FreeBSD. Some dist's need the linker option. Updated all the *.pro files to add
   the -ldl linker option if on a linux-g++ system.
+  
+- Added new chart type "Swing". This is the typical Gann swing chart type.
 
 0.19
 ====
